# This will build the example

PROJECT(pntr_clay_example)
CMAKE_MINIMUM_REQUIRED(VERSION 3.18)

INCLUDE(FetchContent)

IF(POLICY CMP0135)
  CMAKE_POLICY(SET CMP0135 NEW)
  SET(CMAKE_POLICY_DEFAULT_CMP0135 NEW)
ENDIF()

FETCHCONTENT_DECLARE(pntr URL https://github.com/RobLoach/pntr/archive/refs/heads/master.zip)
FETCHCONTENT_MAKEAVAILABLE(pntr)

FETCHCONTENT_DECLARE(pntr_app URL https://github.com/RobLoach/pntr_app/archive/refs/heads/master.zip)
FETCHCONTENT_MAKEAVAILABLE(pntr_app)

FILE(GLOB SRC_FILES src/*.c)
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} pntr pntr_app)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/src")

IF (EMSCRIPTEN)
  ADD_COMPILE_DEFINITIONS(PNTR_APP_WEB)
  SET(CMAKE_EXECUTABLE_SUFFIX ".mjs")
  TARGET_LINK_OPTIONS(${PROJECT_NAME} PRIVATE -sASSERTIONS=1 -sASYNCIFY -sALLOW_MEMORY_GROWTH=1)
ELSE()
  ADD_COMPILE_DEFINITIONS(PNTR_APP_RAYLIB)
  FetchContent_Declare(raylib URL https://github.com/raysan5/raylib/archive/refs/tags/5.5.zip)
  FETCHCONTENT_MAKEAVAILABLE(raylib)
  TARGET_LINK_LIBRARIES(${PROJECT_NAME} raylib)
ENDIF()